examples/test/testpolicy18086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18086
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key46: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value7
          key40: value3
      podSelector:
        matchLabels:
          key21: value17
          key40: value14
